--- a/parallax.html
+++ b/parallax.html
@@ -8,6 +8,7 @@
     <title>Parallax</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js" defer></script>
+    <script src="parallax.js" defer></script>
 </head>
 
 <body>
@@ -17,6 +18,24 @@
     </section>
     <section>
         <h2>A Dummy Section</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad voluptate dignissimos animi nisi nostrum
+            temporibus suscipit cumque harum magni hic omnis repellendus quaerat placeat ab, doloribus praesentium
+            commodi quae optio.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad voluptate dignissimos animi nisi nostrum
+            temporibus suscipit cumque harum magni hic omnis repellendus quaerat placeat ab, doloribus praesentium
+            commodi quae optio.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad voluptate dignissimos animi nisi nostrum
+            temporibus suscipit cumque harum magni hic omnis repellendus quaerat placeat ab, doloribus praesentium
+            commodi quae optio.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad voluptate dignissimos animi nisi nostrum
+            temporibus suscipit cumque harum magni hic omnis repellendus quaerat placeat ab, doloribus praesentium
+            commodi quae optio.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad voluptate dignissimos animi nisi nostrum
+            temporibus suscipit cumque harum magni hic omnis repellendus quaerat placeat ab, doloribus praesentium
+            commodi quae optio.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad voluptate dignissimos animi nisi nostrum
+            temporibus suscipit cumque harum magni hic omnis repellendus quaerat placeat ab, doloribus praesentium
+            commodi quae optio.</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad voluptate dignissimos animi nisi nostrum
             temporibus suscipit cumque harum magni hic omnis repellendus quaerat placeat ab, doloribus praesentium
             commodi quae optio.</p>
